// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`matches snapshot with internal and external cards 1`] = `
<div>
  <section
    class="relative min-h-screen flex items-center justify-center overflow-hidden pt-24 pb-8 hero-gradient-gold"
  >
    <div
      class="section-container relative z-10 w-full"
    >
      <div
        class="text-center mb-12 md:mb-16 hidden md:block"
      >
        <div
          class="relative inline-block mx-auto mb-6"
        >
          <div
            class="absolute inset-0 bg-gradient-radial from-yellow-200/40 via-yellow-100/20 to-transparent blur-3xl scale-110"
          />
          <img
            alt="Connect"
            class="relative w-auto h-48 mx-auto"
            src="/images/ConnectLogoBIG-Black.svg"
          />
        </div>
        <h1
          class="font-slogan text-3xl md:text-4xl lg:text-5xl text-brand-text tracking-wider uppercase mb-4"
        >
          Home of Beats on the Beltline
        </h1>
      </div>
      <div
        class="flex flex-col md:flex-row md:justify-center md:flex-wrap gap-4 max-w-7xl mx-auto"
      >
        <a
          class="block h-full md:w-72"
          href="/events"
        >
          <div
            data-testid="hero-card"
          >
            Internal Card
          </div>
        </a>
        <a
          class="block h-full md:w-72"
          href="https://example.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            data-testid="hero-card"
          >
            External Card
          </div>
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[`matches snapshot with no cards 1`] = `
<div>
  <section
    class="relative min-h-screen flex items-center justify-center overflow-hidden pt-24 pb-8 hero-gradient-gold"
  >
    <div
      class="section-container relative z-10 w-full"
    >
      <div
        class="text-center mb-12 md:mb-16 hidden md:block"
      >
        <div
          class="relative inline-block mx-auto mb-6"
        >
          <div
            class="absolute inset-0 bg-gradient-radial from-yellow-200/40 via-yellow-100/20 to-transparent blur-3xl scale-110"
          />
          <img
            alt="Connect"
            class="relative w-auto h-48 mx-auto"
            src="/images/ConnectLogoBIG-Black.svg"
          />
        </div>
        <h1
          class="font-slogan text-3xl md:text-4xl lg:text-5xl text-brand-text tracking-wider uppercase mb-4"
        >
          Home of Beats on the Beltline
        </h1>
      </div>
      <div
        class="flex flex-col md:flex-row md:justify-center md:flex-wrap gap-4 max-w-7xl mx-auto"
      />
    </div>
  </section>
</div>
`;
